<resources>
    <string name="app_name">FirebaseDatabase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_row">⋮</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Enter_Email_address">Enter Email address</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Not_yet">Not Register Yet??</string>



</resources>
